add critical port link

--- a/Tools/magus/www/tmpls/header.tmpl
+++ b/Tools/magus/www/tmpls/header.tmpl
@@ -38,6 +38,7 @@
     		<li><a href="/magus/">Home</a></li>
 		<li><a href="/magus/runs/">Run List</a></li>
 		<li><a href="/magus/machines/">Machine List</a></li>
+		<li><a href="/magus/critical/">Critical Port List</a></li>
 		<li><a href="http://app.midnightbsd.org/">App Store</a></li>
 		<li><a href="http://www.midnightbsd.org/">MidnightBSD</a></li>
 	</ul>
