--- a/Tools/magus/www/tmpls/compare.tmpl
+++ b/Tools/magus/www/tmpls/compare.tmpl
@@ -25,9 +25,9 @@
         <td class="<TMPL_VAR NAME=status2>"><TMPL_VAR NAME="status2"></td>
         <td>
               <TMPL_IF NAME="critical">
-                    <span class="label label-important">Critical</span>
+                    <span class="label label-success">Critical</span>
               <TMPL_ELSE>
-                   <span class="label label-default">Normal</span>
+                   <span class="label label-primary">Normal</span>
               </TMPL_IF>
         </td>
     </tr>
