--- a/Tools/magus/www/tmpls/port.tmpl
+++ b/Tools/magus/www/tmpls/port.tmpl
@@ -165,12 +165,13 @@ $(document).ready(function() {
     });
 
     window.llmcheck = function() {
-        var logmsg = $('pre.log').text().slice(-2000);
+        var logmsg = $('pre.log').text().slice(-500);
         var llmAPI = '/magus/auth/llm.cgi';
 
         $.ajax({
         url: llmAPI,
         method: 'POST',
+        timeout: 300000,
         data: { content: logmsg },
         dataType: 'json',
         success: function(data) {
