--- a/Tools/magus/www/tmpls/port.tmpl
+++ b/Tools/magus/www/tmpls/port.tmpl
@@ -131,6 +131,7 @@
 <div id="llmlog" class="llmlogs">
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 <script type="text/javascript">
 $(document).ready(function() {
     var cpe = '<TMPL_VAR NAME=cpe>';
@@ -166,7 +167,7 @@ $(document).ready(function() {
 
     window.llmcheck = function() {
         var port = $('h2').text();
-        var logdata = $('pre.log').text().slice(-2000);
+        var logdata = $('pre.log').text().slice(-500);
         var logmsg = "Analyze the MidnightBSD package build error for " + port + " and suggest a fix:\n\n" + logdata;
         var llmAPI = '/magus/auth/llm.cgi';
 
@@ -186,7 +187,7 @@ $(document).ready(function() {
                 $llm.append('<p>No LLM analysis.</p>');
             } else {
                 $.each(data, function(index, llmresp) {
-                    $llm.append(llmresp);
+                    $llm.append(marked.parse(llmresp));
                 });
             }
         },
