--- a/Tools/magus/www/tmpls/port.tmpl
+++ b/Tools/magus/www/tmpls/port.tmpl
@@ -32,11 +32,15 @@
         <td><TMPL_VAR NAME="status"></td>
         <td>
           <TMPL_IF NAME="can_reset">
-            (<a onclick="return confirm_reset()" href="/magus/auth/reset_port.cgi?id=<TMPL_VAR NAME=id>&tm=<TMPL_VAR NAME=tm>">Reset Port</a>)
+            <a class="btn btn-danger" onclick="return confirm_reset()" href="/magus/auth/reset_port.cgi?id=<TMPL_VAR NAME=id>&tm=<TMPL_VAR NAME=tm>">Reset Port</a>
           </TMPL_IF>
         </td>
     </tr>
     </table>
+
+    <p>License Permissions:  <TMPL_LOOP NAME="perms">
+                            	<TMPL_VAR NAME="perm">
+                               </TMPL_LOOP>
   </section>
 
 <section>
@@ -127,7 +131,7 @@
 </ul>
 
 <h3>LLM</h3>
-<button class="btn" onclick="javascript:llmcheck()">Analyze</button>
+<button class="btn btn-info" onclick="javascript:llmcheck()">Analyze</button>
 <div id="llmlog" class="llmlogs">
 </div>
 
