Tools/magus: update design

--- a/Tools/magus/www/tmpls/index.tmpl
+++ b/Tools/magus/www/tmpls/index.tmpl
@@ -7,7 +7,8 @@
   <div class="jumbotron">
     <div class="media">
       <span class="media-left" style="padding: 10px">
-        <img src="/art/logo/MidnightBSDLogo64x64.png" width="64" height="64">
+	<img src="/images/magus2.png" width=300 height=202>
+        <!--<img src="/art/logo/MidnightBSDLogo64x64.png" width="64" height="64"> -->
       </span>
       <div class="media-body">
         <p class="lead">Magus, the MidnightBSD package cluster, is responsible for building software packages.</p>
